--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-API_URL=http://localhost:4000/api
+REACT_APP_API_URL=http://localhost:4000/api
+REACT_APP_CLIENT_ID=[INSERT ID]
+REACT_APP_CLIENT_SECRET=[INSERT KEY]
